--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Hero Background Video</title>
+  <title>Hero Background Video + Second Video</title>
   <style>
-    html, body { height: 100%; margin: 0; }
-    .wrap { position: fixed; inset: 0; display: grid; place-items: center; background:#000; }
-    video { width: 100%; height: 100%; object-fit: cover; }
+    html, body { margin:0; background:#000; }
+    section { min-height:100vh; display:flex; align-items:center; justify-content:center; }
+    video { width:100%; height:100%; object-fit:cover; }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <!-- 同じフォルダに movie.mp4 を置いてください -->
-    <video autoplay muted playsinline loop preload="metadata">
+  <!-- 1つ目の動画（背景用） -->
+  <section>
+    <video autoplay muted loop playsinline preload="metadata">
       <source src="movie.mp4" type="video/mp4">
-      <!-- 可能なら互換性向上のため WebM も追加できます
-      <source src="movie.webm" type="video/webm">
-      -->
-      お使いの環境では動画を再生できません。
     </video>
-  </div>
+  </section>
+
+  <!-- 2つ目の動画（新しく追加したい） -->
+  <section>
+    <video controls preload="metadata" style="max-width:80%; height:auto;">
+      <source src="movie2.mp4" type="video/mp4">
+    </video>
+  </section>
 </body>
 </html>
