--- a/index.html
+++ b/index.html
@@ -3,43 +3,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Two Videos (Autoplay once)</title>
+  <title>Video 1</title>
   <style>
-    html, body { margin:0; background:#000; }
-    section {
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-    }
-    /* 1本目（背景風に大きく表示） */
-    .hero video {
+    html, body { margin:0; background:#000; height:100%; }
+    video {
       width:100%;
       height:100vh;
       object-fit:cover;
     }
-    /* 2本目（小さめ表示） */
-    .second video {
-      max-width:80%;
-      height:auto;
-      border-radius:12px;
-      box-shadow:0 4px 16px rgba(0,0,0,0.6);
-    }
   </style>
 </head>
 <body>
-  <!-- 1本目の動画（自動再生・1回だけ再生） -->
-  <section class="hero">
-    <video autoplay muted playsinline preload="metadata">
-      <source src="movie.mp4" type="video/mp4">
-    </video>
-  </section>
-
-  <!-- 2本目の動画（自動再生・1回だけ再生） -->
-  <section class="second">
-    <video autoplay muted playsinline preload="metadata">
-      <source src="movie2.mp4" type="video/mp4">
-    </video>
-  </section>
+  <!-- 1本目の動画（自動再生・1回だけ） -->
+  <video autoplay muted playsinline preload="metadata">
+    <source src="movie.mp4" type="video/mp4">
+  </video>
 </body>
 </html>
