--- a/index.html
+++ b/index.html
@@ -1,22 +1,13 @@
 <!doctype html>
 <html lang="ja">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Video 1</title>
-  <style>
-    html, body { margin:0; background:#000; height:100%; }
-    video {
-      width:100%;
-      height:100vh;
-      object-fit:cover;
-    }
-  </style>
-</head>
-<body>
-  <!-- 1本目の動画（自動再生・1回だけ） -->
-  <video autoplay muted playsinline preload="metadata">
-    <source src="movie.mp4" type="video/mp4">
-  </video>
-</body>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Video 1</title>
+<style>
+  html,body{margin:0;background:#fff}
+  video{display:block;width:100%;height:auto;object-fit:contain}
+</style>
+<video autoplay muted playsinline preload="metadata">
+  <source src="movie.mp4" type="video/mp4">
+</video>
 </html>
