--- a/second.html
+++ b/second.html
@@ -1,25 +1,14 @@
 <!doctype html>
 <html lang="ja">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Video 2</title>
-  <style>
-    html, body { margin:0; background:#000; height:100%; }
-    video {
-      width:80%;
-      height:auto;
-      margin:auto;
-      display:block;
-      border-radius:12px;
-      box-shadow:0 4px 16px rgba(0,0,0,0.6);
-    }
-  </style>
-</head>
-<body>
-  <!-- 2本目の動画（自動再生・1回だけ） -->
-  <video autoplay muted playsinline preload="metadata">
-    <source src="movie2.mp4" type="video/mp4">
-  </video>
-</body>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Video 2</title>
+<style>
+  html,body{margin:0;background:#fff}
+  /* 2本目は少し小さめに見せたい場合は max-width を調整 */
+  video{display:block;max-width:80%;height:auto;margin:0 auto;object-fit:contain}
+</style>
+<video autoplay muted playsinline preload="metadata">
+  <source src="movie2.mp4" type="video/mp4">
+</video>
 </html>
